# sudoku

./: LICENSE  README.md  pyproject.toml  solver.py
tests/: test_sudoku_solver.py
